# Spring-22-Game-Project

./: .gitignore.txt  CMakeLists.txt  README.md  Spring22.sln  unique.txt
Indev/: CMakeLists.txt  Events.cpp  Events.h  GameWindow.cpp  GameWindow.h  Indev.h  Indev.vcxproj  Indev.vcxproj.filters  IndevApp.cpp  IndevApp.h  IndevUtility.h  KeyCodes.h  Renderer.cpp  Renderer.h  RendererImplementation.h  Shader.cpp  Shader.h  ShaderImplementation.h  Sprite.cpp  Sprite.h  SpriteImplementation.h  WindowImplementation.h  pch.h
Indev/Assets/Shaders/: defaultFragment.glsl  defaultVertex.glsl
Indev/specificGLFW/: GlfwWindow.cpp  GlfwWindow.h
Indev/specificOpenGL/: OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLSprite.cpp  OpenGLSprite.h
Indev/x64/Debug/: vc142.idb
Indev/x64/Debug/Indev.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
Indev/x64/Release/: Indev.dll.recipe  Indev.iobj  Indev.ipdb
Indev/x64/Release/Indev.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Indev.lastbuildstate  Indev.write.1u.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog
Spring22/: CMakeLists.txt  Entity.cpp  Entity.h  Spring22.vcxproj  Spring22.vcxproj.filters  SpringApp.cpp  SpringApp.h  main.cpp
Spring22/x64/Debug/: vc142.idb
Spring22/x64/Debug/Spring22.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Spring22.lastbuildstate
Spring22/x64/Release/: Spring22.exe.recipe  Spring22.iobj  Spring22.ipdb
Spring22/x64/Release/Spring22.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
glad/: CMakeLists.txt  glad.vcxproj
glad/include/glad/: glad.h
glad/src/: glad.c
glad/x64/Release/: glad.dll.recipe  glad.iobj  glad.ipdb
glad/x64/Release/glad.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  glad.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
stbi/: stbi.vcxproj
stbi/x64/Release/stbi.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
x64/Debug/: Indev.exp  Indev.lib
x64/Release/: Indev.exp  Indev.lib  glad.lib  stbi.lib
